2015-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (exec_ssh_cmd): Zero buffer, reset retry counter on
	read success.

2015-06-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.h, misc/plugutils.c (plug_set_launch, plug_get_launch):
	Remove unused functions.

2015-06-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/arglists.c (arg_prepend_value): New function.

	* misc/arglists.h: Add function prototype.

	* misc/prefs.c (prefs_set): Use new function.

2015-06-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (_add_plugin_preference)
	(plug_create_from_nvti_and_prefs): Remove functions.
	(get_plugin_preference): Use g_strchomp().

2015-06-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped, plug_get_key),
	nasl/nasl_builtin_find_service.c (plugin_run_find_service): Use
	global_socket instead of SOCKET.

2015-06-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/kb_redis.c (redis_vcommand, redis_command): New functions.
	Same as redisCommand and redisvCommand, but will retry after EINTR.
	(try_database_index, fetch_max_db_index_compat, fetch_max_db_index)
	(select_database, redis_release_db, redis_transaction_new)
	(redis_transaction_cmd, redis_transaction_end, redis_cmd): Use retry
	versions of command functions.

2015-06-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/iconv.c: Remove unused const variable.

2015-06-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvticache.c (nvticache_get_oids): New function.

	* base/nvticache.h: Add function prototype.

2015-06-03  Sven Haardiek <sven.haardiek@greenbone.net>

	* CMakeLists.txt: Enable preprocessor defition for OPENVAS_PID_DIR

2015-06-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Add support for handling timeout option to omp_authenticate_info_ext ().

	* omp/omp.c (omp_authenticate_info_ext): Use try_read_entity ()